campos do formulario criados

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,8 +13,15 @@
             <input type="text">
         </div>
         <div>
-            <label for="text">E_mail</label>
+            <label for="text">E-mail</label>
             <input type="email">
+        </div>
+        <div>
+            <input type="checkbox">
+            <label for="text">Quer receber boletins</label>
+        </div>
+        <div>
+            <input type="submit" value="Enviar">
         </div>
     </form>
 </body>
