--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,23 +12,26 @@
 </head>
 <body>
     <form> 
-        <fieldset>
-            
+        <fieldset class="cabcadastro">
+            <label for="text">Cadastro do Cliente</label>
         </fieldset>
         <fieldset class="cadastro">
+            <div class="cliente">
+                <p>Dados do cliente</p>
+            </div>
             <div>
-                <label for="nome"><strong>Nome:</strong></label>
+                <label class="nome1" for="nome">Nome:</label>
                 <input type="text" name="nome" id="nome">
             </div>
 
             <div>
-                <label for="email"><strong>E-mail:</strong></label>
+                <label class="email1" for="email">E-mail:</label>
                 <input type="email" name="email" id="email">
             </div>
 
             <div is> 
                 <input type="checkbox" name="checkbox" id="checkbox">
-                <label>Quer receber boletins</label>
+                <label class="checkbox">Quer receber boletins</label>
             </div> 
 
             <div id="salvar">
