--- a/formulario_simples/index.html
+++ b/formulario_simples/index.html
@@ -13,7 +13,7 @@
 <body>
     <form> 
         <fieldset class="cabcadastro">
-            <label for="text">Cadastro do Cliente</label>
+            <label for="text">Cadastro dob Cliente</label>
         </fieldset>
         <fieldset class="cadastro">
             <div class="cliente">
